# uisurf-agent

./: .env.sample  .gitignore  Makefile  README.md  build-image.sh  main.py  pyproject.toml  run-a2a-inspector.sh  run.sh
docker/: Dockerfile  start.sh  start_browser.sh  xstartup
scripts/: create-gcp-firewall-rules.sh
src/uisurf_agent/: __init__.py  cli.py
src/uisurf_agent/a2a/: browser_a2a.py  confirmation_request_handler.py  desktop_a2a.py
src/uisurf_agent/agents/: __init__.py  browser_agent.py  desktop_agent.py  ui_agent.py
src/uisurf_agent/utils/: animation_utils.py  browser_controller.py  config_utils.py  desktop_controller.py  page_script.js  screenshot_utils.py  webpage_text_utils.py
